# git_hooks

./: .gitmodules  CMakeLists.txt  FindClangFormat.cmake  FindClangFormatCurrent.cmake  FindClangTidy.cmake  FindClangTidyCurrent.cmake  FindClangdCurrent.cmake  LICENSES.yaml  README.md  clangd_client  git-cmake-format.py  init.sh  pre-commit.template.sh  project.template.yaml  remove_hooks.sh  run_hooks.template.sh
